<?xml version="1.0" encoding="utf-8"?>
<layout
   xmlns:android="http://schemas.android.com/apk/res/android">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:gravity="center">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:orientation="vertical"
               android:gravity="center"
               android:background="?attr/huaBagColor">
               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/logo"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/about_version"
                   android:layout_marginTop="12dp"
                   android:textColor="?attr/huaTextColor2"/>
           </LinearLayout>
           <ListView
               android:id="@+id/about_list"
               android:layout_width="match_parent"
               android:layout_height="143dp"
               android:orientation="vertical"
               android:divider="@color/colorWhite"
               android:background="?attr/huaBagColor2">
           </ListView>
       </LinearLayout>

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:orientation="vertical"
           android:background="?attr/huaBagColor"
           android:paddingTop="20dp"
           android:paddingLeft="25dp"
           android:paddingRight="25dp">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/about_description"
               android:gravity="center"
               android:textColor="?attr/huaTextColor2"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_alignParentBottom="true"
               android:gravity="center_horizontal">
               <TextView
                   android:id="@+id/netease_service"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/about_terms1"
                   android:textColor="?attr/huaTextColor2"/>
               <TextView
                   android:id="@+id/netease_rule"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/about_terms2"
                   android:layout_marginTop="12dp"
                   android:layout_marginBottom="12dp"
                   android:textColor="?attr/huaTextColor2"/>
           </LinearLayout>
       </RelativeLayout>

   </LinearLayout>
</layout>